[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chuangjian"
version = "0.1.0"
description = "中文友好的 Tkinter 简易窗口与控件库"
authors = [
    { name="你的名字", email="你的邮箱" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "tk"
] 